# CTF-agent

./: .gitignore  .gitmodules  README.md  docker-compose.yml  main.py  mcp_server.py  prompts.md  prompts_auto_solve.md  prompts_educational.md  pyproject.toml
docker_tools/network/: Dockerfile
docker_tools/python/: Dockerfile  requirements.txt
docker_tools/web/: Dockerfile
testing/crypto/gotta-crack-them-all/: CTF_notes.md  challenge.json  gemini_chat.json  gemini_chat.md  solve.py
testing/crypto/gotta-crack-them-all/.gemini/: settings.json
testing/crypto/too-much-in-common/: CTF_notes.md  challenge.json  crypto_too-much-in-common.json  crypto_too-much-in-common.md
testing/pwn/ezROP/: CTF_notes.md  challenge_description.json  exploit.py  pwn_ezROP_chat.json  pwn_ezROP_chat.md
testing/pwn/my_first_pwnie/: CTF_notes.md  challenge_description.json
testing/pwn/puffin/: CTF_notes.md  challenge_description.json  flag.txt  pwn_puffin.json  pwn_puffin.md
testing/pwn/target_practice/: CTF_notes.md  challenge_description.json  pwn_target_practice.json  target_practice_demo.json
testing/rev/rebug_1/: CTF_notes.md  challenge.json  flag.txt  gemini_chat.json  gemini_chat.md  solve.py
testing/rev/rebug_1/.gemini/: settings.json
testing/rev/the_big_bang/: CTF_notes.md  challenge.json  exploit.py  exploit_final.py  gemini_chat.json  gemini_chat.md
