[project]
name = "ctf-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docker>=7.1.0",
    "fastmcp>=2.13.3",
    "gmpy2>=2.2.2",
    "google-genai>=1.48.0",
    "gradio>=5.49.1",
    "numpy>=2.3.4",
    "openai>=2.7.1",
    "pathvalidate>=3.3.1",
    "psutil>=7.1.3",
    "pwntools>=4.15.0",
]
